<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ziven</string>
    <string name="app_subtitle">Wochenplan &amp; Kalorien</string>
    <string name="nav_today">Heute</string>
    <string name="nav_plan">Plan</string>
    <string name="nav_list">Liste</string>
    <string name="nav_pantry">Vorrat</string>
    <string name="nav_more">Mehr</string>
    <string name="login">Anmelden</string>
    <string name="register">Konto erstellen</string>
    <string name="email">E-Mail</string>
    <string name="password">Passwort</string>
    <string name="check_inbox">Prüfe deinen Posteingang.</string>
</resources>
